Fixed improper vertical alignment of text in some tables

--- a/theme/_custom.scss
+++ b/theme/_custom.scss
@@ -5,6 +5,7 @@
 //	You can find instructions here: http://www.artodia.com/phpbb-31-tutorials/compile-theme/
 //
 
+// Custom time above breadcrumbs (on right)
 .curr_time {
 	float: right;
 	text-align: right;
@@ -13,6 +14,12 @@
 	top: -8px;
 }
 
+// Fix issue where text appears behind navbar header icons (Chrome)
 .rmRainmeterDevTeam-HeaderFix {
 	font-size: 0px !important;
+}
+
+// Fix issue where some table cells are inproperly vertically aligned (mainly on viewonline.php)
+table.table1 .info {
+	vertical-align: top;
 }
